kubernetes/double-nginx-sample/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx-first
  name: nginx-first
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-first
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-first
    spec:
      containers:
      - image: nginx:1.19.6
        name: nginx
        resources: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx-second
  name: nginx-second
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-second
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-second
    spec:
      containers:
      - image: nginx:1.19.6
        name: nginx
        resources: {}
status: {}
---
