kubernetes/double-nginx-sample/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx-first
  name: nginx-first
spec:
  ports:
  - name: 8081-8080
    port: 8081
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-first
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx-second
  name: nginx-second
spec:
  ports:
  - name: 8082-8080
    port: 8082
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-second
  type: ClusterIP
status:
  loadBalancer: {}
