kubernetes/double-nginx-sample/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "true"
spec:
  rules:
  - http:
      paths:
      - path: /first
        backend:
          serviceName: nginx-first
          servicePort: 8081
      - path: /second
        backend:
          serviceName: nginx-second
          servicePort: 8082
